2008-01-15  Graham Cobb  <g+770@cobb.uk.net>

	* gtkdatecombo.c: On chinook use HildonCalendar instead of GtkCalendar

2007-11-05  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac, Makefile.am: Changes for Chinook

2007-07-18  Graham Cobb  <g+770@cobb.uk.net>

	* debian/libgpewidget1.files: add etc so that Maemo backup
	configuration is included.  Note that if --prefix=/usr is
	specified in ./configure command, --sysconfdir=/etc must also be
	specified.

2007-03-28  Florian Boor <florian@kernelconcepts.de>

    * Release 0.115
    * Some minor fixes

2006-12-29  Philippe De Swert <philippedeswert@scarlet.be>
    * colordialog.c : remove unused function
    * pixmaps.c : fix warnings

2006-12-28  Neal H. Walfield  <neal@gnu.org>
    * autogen.sh: Just use autoreconf and intltoolize.

2006-08-16  Florian Boor <florian@kernelconcepts.de>

    * tray.c (gpe_system_tray_dock): Call gdk_notify_startup_complete()
      to make startup notification for dock applications work.

2006-08-02  Florian Boor <florian@kernelconcepts.de>

    * colorrenderer.c: Fix memory hole.
    * gpetimesel.c (do_popup): Handle destruction in callback, fixes
      critical warnings.
      (popup_destroyed): New function.

2006-07-31  Florian Boor <florian@kernelconcepts.de>

    * gpe/colorrenderer.h: Add copyright date.
    * Release 0.114.
    * Makefile.am: Remove accidentally added test stuff.
    * Makefile.am: Add new components.
    * colorrenderer.c: New file.
    * gpe/colorrenderer.h: New file.

2006-07-18  Florian Boor <florian@kernelconcepts.de>

    * Makefile.am: Add library to infoprint dependency to make parallel builds 
      work again.
    * gpetimesel.c (gpe_time_sel_init): Make sizing depend on screen size. 
	* COPYING.LIB: Add license file.

2006-07-17  Florian Boor <florian@kernelconcepts.de>

	* Release version 0.113
	* Makefile.am: Add po/stamp-it to DISTCLEANFILES to make distcheck
          happy.
	* doc/tmpl/*: Some updates to cover new widgets and some automated